gcc/testsuite/rust/rustc/ui/parser/keyword-break-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py break'

fn main() {
    let break = "foo"; // { dg-error "" "" { target *-*-* } }
}

